--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 .gradle
-build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -45,3 +44,5 @@ out/
 _site/
 *.css
 !petclinic.css
+
+.env
